# falco

./: .gitignore  CLmax_opt.csv  CSDL.md  README.md  alpha_vs_CL_WITH.csv  alpha_vs_CL_WITHOUT.csv  component_hierarchy  cruise_v_stall_trim_opt.csv  environment.yml  glide_perf_trim_sim_results.csv  install_env.py  power_avail_trim_sim_results.csv  power_req_trim_sim_results.csv  pyproject.toml  release_notes.md  requirements.txt  setup.py  trim_FM_min.csv  v_MU_trim_opt.csv  v_R_TO_trim_opt.csv  v_X_TO_trim_opt.csv  v_Y_TO_trim_opt.csv  v_stall_TO_trim_opt.csv  v_stall_cruise_trim_opt.csv  v_stall_trim_opt.csv
.github/workflows/: actions.yml
AIAA Aviation 2025/X-57/optimizations/: plotting.py  trim_glide_performance.py  trim_power_avail_max_opt.py  trim_power_req_min_opt.py  v_BR_cruise_trim_opt.py  v_stall_TO_trim_opt.py  v_stall_cruise_trim_opt.py  x57_trim_FM_min.py
docs/: conf.py  index.md
docs/source/: conf.py  index.rst
docs/src/: api.md  examples.md  getting_started.md  references.bib  tutorials.md  welcome.md
docs/src/api_references/: core.md  utils.md
docs/src/examples/: advanced.md  basic.md
examples/advanced_examples/Joeys_X57/: FFDStuff.py  x57Test.py  x57_geometry.py
examples/advanced_examples/NatesWisk/: wiskgen6.py
examples/advanced_examples/wiskgen6/: .vsptime  Wisk_V6.vsp3  Wisk_V6_CS.vsp3  component_hierarchy  wiskgen6.py
examples/advanced_examples/x57/: CL_max_calculation.py  CL_max_opt.py  X57.vsp3  X57_aeroDer.mat  cruise_v_stall_trim_opt.py  plotting.py  tests_x57.py  trim_glide_performance.py  trim_power_avail_max_opt.py  trim_power_req_min_opt.py  v_BE_cruise_trim_opt.py  v_BR_cruise_trim_opt.py  v_H_cruise_trim_opt.py  v_MU_TO_trim_opt.py  v_R_TO_trim_opt.py  v_X_TO_trim_opt.py  v_Y_TO_trim_opt.py  v_stall_TO_trim_opt.py  v_stall_cruise_trim_opt.py  v_stall_trim_opt.py  x57.py  x57_component.py  x57_control_system.py  x57_geom.py  x57_geometry.py  x57_mission.py  x57_mp.py  x57_propulsive_loads.py  x57_solvers.py  x57_trim.py  x57_trim_FM_min.py  x57_trim_power_opt.py  (+2 more)
examples/basic_examples/: b777.py  c172.py  c172_pow_avail.py  c172_stall.py
falco/: __init__.py
falco/utils/: environment.py
flight_simulator/: __init__.py
flight_simulator/core/: aircraft_control_system.py  component.py  condition.py  vehicle_control_system.py
flight_simulator/utils/: VehicleState.py  axis.py  axis_lsdogeo.py  environment.py  euler_rotations.py  forces_moments.py  import_geometry.py  mass_properties.py  vector.py
trim_optimization_outputs/2025-04-07_22.33.59.686114/: ipopt_output.txt  modopt_results.out
trim_optimization_outputs/2025-04-07_22.42.41.712983/: ipopt_output.txt  modopt_results.out
trim_optimization_outputs/2025-04-07_22.48.04.213389/: ipopt_output.txt  modopt_results.out
tutorials/advanced/: ex_geometry_parameterization.ipynb  ex_trim_optimization.ipynb
tutorials/basic/: ex_condition.ipynb  ex_controls.ipynb  ex_geometry.ipynb  ex_mass_properties.ipynb  ex_solvers.ipynb
x57_geometry_out/: problem_history.db
x57_geometry_out/coloring_files/: coloring_traj_phases_climb_rhs_all_solver_sub_core_aerodynamics_Drag_CD0.pkl  coloring_traj_phases_climb_rhs_all_solver_sub_core_aerodynamics_Drag_CDI.pkl  coloring_traj_phases_climb_rhs_all_solver_sub_core_aerodynamics_Drag_drag_total_drag_coeff.pkl  coloring_traj_phases_cruise_rhs_all_solver_sub_core_aerodynamics_Drag_CD0.pkl  coloring_traj_phases_cruise_rhs_all_solver_sub_core_aerodynamics_Drag_CDI.pkl  coloring_traj_phases_cruise_rhs_all_solver_sub_core_aerodynamics_Drag_drag_total_drag_coeff.pkl  coloring_traj_phases_descent_rhs_all_solver_sub_core_aerodynamics_Drag_CD0.pkl  coloring_traj_phases_descent_rhs_all_solver_sub_core_aerodynamics_Drag_CDI.pkl  coloring_traj_phases_descent_rhs_all_solver_sub_core_aerodynamics_Drag_drag_total_drag_coeff.pkl  total_coloring.pkl
x57_geometry_out/reports/: driver_scaling_report.html  inputs.html  mission_summary.md  mission_timeseries_data.csv  n2.html  opt_report.html  status.json  total_coloring.html  traj_linkage_report.html  traj_results_report.html
(+134 files in other folders)
