[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "falco"
description = "A package for 6 DoF aircraft flight simulator with automatic derivatives"
readme = "README.md"
requires-python = ">=3.9, <3.11"
license = {file = "LICENSE.txt"}
keywords = ["auto-differentation", "optimization"]
authors = [{name = "Darshan Sarojini", email = "sdarshan@vt.edu"}, {name = "Nathan Shune", email = "nshune@vt.edu"}, {name = "Joey Gould", email = "gouldj@vt.edu"}]
dependencies = [
    'numpy==1.26.4',
    'vedo',
    'pint',
    'pandas',
    'scipy',
    'matplotlib',
    'sympy',
    'pytest',
    'cython==0.29.28',
    'graphviz',
    'jax',
    'casadi',
    'ipykernel',
    'csdl @ git+https://github.com/LSDOlab/csdl.git',
    'CSDL_alpha @ git+https://github.com/LSDOlab/CSDL_alpha.git',
    'modopt @ git+https://github.com/LSDOlab/modopt.git',
    'lsdo_geo @ git+https://github.com/LSDOlab/lsdo_geo.git',
    'lsdo_b_splines_cython @ git+https://github.com/LSDOlab/lsdo_b_splines_cython.git',
    'lsdo_function_spaces @ git+https://github.com/LSDOlab/lsdo_function_spaces.git',
    'NRLMSIS2 @ git+https://github.com/nichco/NRLMSIS2.git'
]
dynamic = ['version']

[project.optional-dependencies]
test = ['pytest']
docs = [
    'myst-nb',
    'sphinx==5.3.0',
    'sphinx_rtd_theme',
    'sphinx-copybutton',
    'sphinx-autoapi==2.1.0',
    'astroid==2.15.5',
    'numpydoc',
    'gitpython',
    'sphinxcontrib-collections @ git+https://github.com/anugrahjo/sphinx-collections.git',
    'sphinxcontrib-bibtex',
]

[tool.setuptools.dynamic]
version = {attr = "falco.__version__"}

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
exclude = ["tutorials"]
